connexion working well

--- a/src/main/resources/templates/Inscription/ConfirmationInscription.html
+++ b/src/main/resources/templates/Inscription/ConfirmationInscription.html
@@ -10,7 +10,7 @@
 <div class="container">
     <h1>Inscription Confirmée</h1>
     <p>Votre inscription a été réalisée avec succès !</p>
-    <a href="/" class="button">Se Connecter</a>
+    <a href="/static" class="button">Se Connecter</a>
 </div>
 </body>
 </html>
