--- a/src/main/resources/templates/Inscription/Inscription.html
+++ b/src/main/resources/templates/Inscription/Inscription.html
@@ -77,7 +77,7 @@
       <input type="submit" value="S'inscrire">
     </div>
     <div class="sign-in">
-      Déjà un compte ? <a href="/">Connectez-vous maintenant</a>
+      Déjà un compte ? <a href="/login">Connectez-vous maintenant</a>
     </div>
   </form>
   </body>
