- Connexion working - Homepage showing location working - adding inscrption working -still issue with session credits

--- a/src/main/resources/templates/Connexion/Connexion.html
+++ b/src/main/resources/templates/Connexion/Connexion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Connexion</title>
-    <link rel="stylesheet" href="/Connexion.css">
+    <link rel="stylesheet" href="/CSS/Connexion.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <div class="title login">Connexion</div>
 </div>
 <div class="form-inner">
-    <form action="/login" method="post" class="login">
+    <form action="#" th:action="@{/login}" method="post" class="login">
         <div class="field">
             <input type="text" name="username" placeholder="Email ou Nom d'utilisateur" required>
             <input type="password" name="password" placeholder="Mot de passe" required>
@@ -21,6 +21,7 @@
         </div>
         <div class="signup-link">
             Pas encore membre ? <a href="/inscription">Inscrivez-vous maintenant</a>
+
         </div>
 
         <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
