--- a/src/main/resources/templates/Inscription/ConfirmationInscription.html
+++ b/src/main/resources/templates/Inscription/ConfirmationInscription.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/ConfirmationInscription.css">
+    <link rel="stylesheet" href="/CSS/ConfirmationInscription.css">
     <title>Confirmation d'Inscription</title>
 
 </head>
@@ -10,7 +10,7 @@
 <div class="container">
     <h1>Inscription Confirmée</h1>
     <p>Votre inscription a été réalisée avec succès !</p>
-    <a href="/static" class="button">Se Connecter</a>
+    <a href="#" th:href="@{/login}" class="button">Se Connecter</a>
 </div>
 </body>
 </html>
