--- a/src/main/resources/templates/Inscription/Inscription.html
+++ b/src/main/resources/templates/Inscription/Inscription.html
@@ -2,7 +2,7 @@
   <html lang="fr">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/Inscription.css">
+    <link rel="stylesheet" href="/CSS/Inscription.css">
     <title>Formulaire d'Inscription</title>
 
     <script>
