update no more relation issue database edited

--- a/src/main/resources/templates/Fragments/Header/Header.html
+++ b/src/main/resources/templates/Fragments/Header/Header.html
@@ -13,7 +13,7 @@
                 <li sec:authorize="${isAuthenticated() and hasApparts}"><a th:href="@{/louer}">Louer votre bien</a></li>
                 <!-- Afficher seulement si l'utilisateur est connecté -->
                 <li sec:authorize="isAuthenticated()">
-                    <a th:href="@{/CreationAppart}">Ajouter un Appartement</a>
+                    <a th:href="@{/UpdateorCreate}">Ajouter un Appartement</a>
                 </li>
                 <!-- Toggle entre Connexion et Profil -->
                 <li sec:authorize="!isAuthenticated()">
