damn it works dont how

--- a/src/main/resources/templates/Connexion/Connexion.html
+++ b/src/main/resources/templates/Connexion/Connexion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" >
+<html lang="fr" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <title>Connexion</title>
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<!-- Inclusion du Header -->
+<div th:replace="Fragments/Header/Header :: header"></div>
+
 <div class="title-text">
     <div class="title login">Connexion</div>
 </div>
@@ -21,12 +24,9 @@
         </div>
         <div class="signup-link">
             Pas encore membre ? <a href="/inscription">Inscrivez-vous maintenant</a>
-
         </div>
-
         <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
     </form>
-
 </div>
 </body>
 </html>
