--- a/src/main/resources/templates/Appart/UpdateorCreate.html
+++ b/src/main/resources/templates/Appart/UpdateorCreate.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Modifier Appart</title>
 </head>
 <body>
+<div th:replace="Fragments/Header/Header :: header"></div>
 <h2>Modifier un appartement</h2>
 
-<form action="/appartements/modifier/{id}" method="post">
-    Type d'appartement: <input type="text" name="type_appart" value="{type_appart}" /><br/>
-    Prix location: <input type="number" name="prix_loc" value="{prix_loc}" /><br/>
-    Prix charges: <input type="number" name="prix_charge" value="{prix_charge}" /><br/>
-    Rue: <input type="text" name="rue" value="{rue}" /><br/>
-    Arrondissement: <input type="text" name="arrondissement" value="{arrondissement}" /><br/>
-    Étage: <input type="number" name="etage" value="{etage}" /><br/>
-    Ascenseur: <input type="checkbox" name="ascenseur" {ascenseur_checked} /><br/>
-    Préavis: <input type="text" name="preavis" value="{preavis}" /><br/>
-    Date libre: <input type="date" name="date_libre" value="{date_libre}" /><br/>
+<form th:action="@{/appartements/ajouter}" th:object="${appart}" method="post">
+    Type d'appartement: <input type="text" th:field="*{type_appart}" /><br/>
+    Prix location: <input type="number" th:field="*{prix_loc}" /><br/>
+    Prix charges: <input type="number" th:field="*{prix_charge}" /><br/>
+    Rue: <input type="text" th:field="*{rue}" /><br/>
+    Arrondissement: <input type="text" th:field="*{arrondissement}" /><br/>
+    Étage: <input type="number" th:field="*{etage}" /><br/>
+    Ascenseur: <input type="checkbox" th:field="*{ascenseur}" /><br/>
+    Préavis: <input type="text" th:field="*{preavis}" /><br/>
+    Date libre: <input type="date" th:field="*{date_libre}" /><br/>
 
-    <button type="submit">Modifier</button>
+    <button type="submit">Ajouter</button>
 </form>
+
 </body>
 </html>
