--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
     <title>Home Page</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/CSS/home.css}">
+    <!--  <link rel="stylesheet" type="text/css" th:href="@{/CSS/home.css}"> -->
+
 </head>
 <body>
-<div th:replace="Fragments/Header/Header :: Header"></div>
+<div th:replace="~{Fragments/Header/Header :: Header}"></div>
+
 
 <div class="container">
     <h1>Liste des Appartements</h1>
